# trace-ledger-spec

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: first-pr.md
examples/: README.md  bad_event_type.jsonl  seq_gap.jsonl  tampered_hash.jsonl  valid.jsonl
scripts/: regen_examples.py
spec/: MIGRATIONS.md  event-types.yaml  trace-event.schema.json
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tests/: conftest.py  test_cli.py  test_examples.py  test_hash.py  test_schema.py  test_seq.py  test_vocab.py
trace_ledger_spec/: __init__.py  cli.py  validator.py
