[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-ledger-spec"
version = "0.1.0"
description = "json schema, controlled vocabulary, and reference validator for an append-only agent trace ledger."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "trace-ledger-spec contributors" }]
keywords = ["agent", "trace", "ledger", "audit", "schema", "json-schema"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jsonschema>=4.21",
  "PyYAML>=6.0",
]

[project.scripts]
trace-ledger-spec = "trace_ledger_spec.cli:main"

[project.urls]
Homepage = "https://traceledger.dev"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["trace_ledger_spec"]

[tool.hatch.build.targets.wheel.force-include]
"spec/trace-event.schema.json" = "trace_ledger_spec/_spec/trace-event.schema.json"
"spec/event-types.yaml" = "trace_ledger_spec/_spec/event-types.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
